--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,14 @@ h2 {
   font-size: 2.2rem;
   margin-bottom: 1.5rem;
 }
-
-@media screen and (min-width: 1024px) {
+span {
+  font-size: 1.6rem;
+}
+/* @media screen and (min-width: 1024px) {
   span {
     font-size: 1.6rem;
   }
-}
+} */
 
 
 
@@ -160,11 +162,14 @@ h2 {
   color: #234894;
   font-weight: 600;
   margin-right: 1rem;
+
 }
 
 .request__header-date {
   color: #696969;
   font-weight: 400;
+  font-size: 1.2rem;
+  align-content: center;
 }
 
 .request__user-info {
@@ -193,7 +198,6 @@ h2 {
 }
 
 .request .btn--block {
-  /* font-size: 1.6rem; */
   justify-content: flex-end;
 }
 
