--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ span {
 /* Request Block */
 .block-request {
   display: grid;
-  gap: 8rem 6rem;
+  gap: 2rem 1rem;
   justify-content: center;
   align-content: center;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -130,7 +130,7 @@ span {
 
 .request {
   /* font-size: 1.8rem; */
-  transition: all 0.2s ease-out;
+  /* transition: all 0.2s ease-out; */
 }
 
 .request__header {
@@ -202,7 +202,7 @@ span {
 }
 
 .request:hover {
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
 }
 
 .request__btn {
